# modchef

./: .gitignore  README.md  announcement.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: ngc-wiki-modchef.md  ngc-wiki-modchef.xwiki  user-guide.md  user-guide.xwiki
docs/superpowers/plans/: 2026-06-16-dependency-resolution.md  2026-06-16-minimal-module-load.md  2026-06-16-modchef.md  2026-06-17-index-installed-from-eb-tree.md  2026-06-17-installed-vs-available.md  2026-06-17-toolchain-unification-suggestions.md
docs/superpowers/specs/: 2026-06-16-dependency-resolution-design.md  2026-06-16-minimal-module-load-design.md  2026-06-16-modchef-design.md  2026-06-17-index-installed-from-eb-tree-design.md  2026-06-17-installed-vs-available-design.md  2026-06-17-toolchain-unification-suggestions-design.md
easybuild/: modchef-1.0.0-GCCcore-12.3.0.eb
src/modchef/: cli.py  graph.py  indexer.py  output.py  recipe.py  schema.py  solver.py  suggest.py  toolchains.py
tests/: conftest.py  test_cli.py  test_graph.py  test_indexer.py  test_output.py  test_recipe.py  test_schema.py  test_solver.py  test_suggest.py  test_toolchains.py
tests/fixtures/: sample.ttl
tests/fixtures/eb/: BCFtools-1.18-GCC-12.3.0.eb  BWA-0.7.18-GCC-13.2.0.eb  PyTorch-2.1.2-foss-2023a.eb  R-bundle-ggsurvfit-1.1.0-foss-2024a.eb  SAMtools-1.18-GCC-12.3.0.eb  SciPy-bundle-2023.07-gfbf-2023a.eb  zlib-1.2.13-GCCcore-12.3.0.eb
tests/fixtures/eb_official/: Faker-bundle-1.0-gfbf-2023a.eb  SPAdes-3.15.5-GCC-12.3.0.eb  zlib-1.2.13-GCCcore-12.3.0.eb
(+2 files in other folders)
